# tree-sitter-dhall

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  jsconfig.json  package-lock.json  package.json  pyproject.toml  setup.py  tests.md  tests.sh  tree-sitter.json
.github/workflows/: checks.yml
bindings/c/: tree-sitter-dhall.h  tree-sitter-dhall.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dhall/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDhallTests/: TreeSitterDhallTests.swift
corpus/: annotations.txt  builtins.txt  comments.txt  completion.txt  function-types.txt  functions.txt  general.txt  identifiers.txt  if-then-else.txt  import.txt  lambda.txt  let.txt  lists.txt  numbers.txt  operators.txt  records.txt  selectors.txt  shebang.txt  strings.txt  time.txt  with.txt
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: assert.txt  builtins.txt  bytes.txt  comments.txt  example.txt  function-types.txt  functions.txt  general.txt  identifiers.txt  if-then-else.txt  import.txt  lambda.txt  lists.txt  numbers.txt  operators.txt  records.txt  selectors.txt  shebang.txt  strings.txt  time.txt  unions.txt
