[package]
name = "tree-sitter-dhall"
description = "Dhall grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["jae beller <foss@jae.zone>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dhall"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jbellerb/tree-sitter-dhall"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
